Ok... let's make it work now :)
Initial check in was midway between two implementations - this should
be a working version.

--- a/test_1000.html
+++ b/test_1000.html
@@ -100,8 +100,8 @@
 		
 		var testRun = function(){
 			if(tests.length > 0){
-				//tests.pop()();
-				//setTimeout(testRun, 500);
+				tests.pop()();
+				setTimeout(testRun, 500);
 			};
 		}
 		
