trim dead code and add prefixing for alias
trim about 30 lines of dead code and switch to use @-plugin-alias
rather than trying to shim to something ambiguous and early lest we
create new problems.

--- a/test_500.html
+++ b/test_500.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<style>
-	@alias jq-parent :not(:empty);
+	@-plugin-alias jq-parent :not(:empty);
 	
 	:test-matches(div[donation], div span#borris){
 	   background-color: yellow;
