getting a build together
Just getting a start on building this into something actually usable.

Also first pass on making it easier to use and more efficient.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 	<link 
 		rel="stylesheet" 
 		data-usesplugins="true" 
+		data-plugins="myPlugins.js"
+		data-cacheversion="1"
 		href="plugin.css" type="text/css" />
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="cssPlugin2.js"></script>
-	<script type="text/javascript" src="cssPluginCompiler.js"></script>
-	<script type="text/javascript" src="myPlugins.js"></script>
-	<script type="text/javascript" src="jqueryAdapter.js"></script>
+	<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="cssPlugin-all-min.js"></script>
 </head>
 <body>
 	<img id="logo" src="plug.png" />
