--- a/support/test_500.html
+++ b/support/test_500.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<style type="text/css">
-			@alias jq-parent :not(:empty);
+			@-plugin-alias jq-parent :not(:empty);
 
 			:test-matches(div[donation], div span#borris) {
 				background-color: yellow;
