add some links to wiki docs so that at least something in here goes somewhere useful :)

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
    	<div id="forUsers">
 		<h4>Getting Started with Hitch</h4>
 		<ul>
-			<li><a href="">Quick Setup</a></li>
+			<li><a href="https://github.com/bkardell/Hitch/wiki/Getting-Started">Quick Setup</a></li>
 			<li><a href="">Quick Tutorial</a></li>
 			<li><a href="">Finding Hitches</a></li>
 			<li><a href="">Tutorials / Documentation</a></li>
@@ -96,10 +96,10 @@
 	<div id="forDevelopers">
 		<h4>Developer Resources</h4>
 		<ul>
-			<li><a href="">Source Code / Git</a></li>
-			<li><a href="">Developing Selector Hitches</a></li>
+			<li><a href="https://github.com/bkardell/Hitch/">Source Code / Git</a></li>
+			<li><a href="https://github.com/bkardell/Hitch/wiki/Writing-Hitches">Developing Selector Hitches</a></li>
 			<li><a href="">Developing HTML Hitches</a></li>
-			<li><a href="">Submit a Bug</a></li>
+			<li><a href="https://github.com/bkardell/Hitch/issues">Submit a Bug</a></li>
 		</ul>
 	</div>
     <p>
