--- a/support/dev-fixture.html
+++ b/support/dev-fixture.html
@@ -37,7 +37,9 @@
 			}
 		</style>
 		
-		<link rel="stylesheet" href="dev-css.css" type="text/css" charset="utf-8"></link>
+		<!-- Example with LINK tag interpreted -->
+		<link href="dev-css.css" x-hitch-interpret="true" type="text/css" rel="stylesheet"></link>
+
 		
 	</head>
 	<body id="dev-fixture">
@@ -53,5 +55,10 @@
 			<p class="dev-css-require">Should be Blue</p>
 		</div>
 		
+		<h4>Widget Demo</h4>
+		<!-- Example with "widget" -->
+		<div x-hitch-widget="dev-widget.js">
+			<span class="dev-widget"></span>
+		</div>
 	</body>
 </html>
