More work on wiki examples.
Death is not the worst that can happen to men.

--- a/support/dev-fixture.html
+++ b/support/dev-fixture.html
@@ -44,7 +44,7 @@
 		<link href="dev-css.css" x-hitch-interpret="true" type="text/css" rel="stylesheet"></link>
 		
 		<style x-hitch-interpret="true">
-			.cars div:-hitch-allof(.new > div, .fast) p{
+			.cars div:-hitch-anyof(.foreign .used, .domestic .new) .cheap p{
 				color: green;
 			}
 		</style>
