Adding version information. (0.5.0)

--- a/support/dev-fixture.html
+++ b/support/dev-fixture.html
@@ -29,7 +29,7 @@
 			span:-hitch-contains(Should be Yellow){
 				color: yellow;
 			}
-			span:-hitch-contains(/#\d/){
+			span:-hitch-contains(/#\d./){
 				color: #336699;
 			}
 			:-dev-js-api(){
